# ISMIR-Jazzmus

./: .gitignore  predict.py  pyproject.toml  upload_to_hf.py
jazzmus/model/smt/: configuration_smt.py
launch_scripts/: create_splits.py
